# Distributed_Imaging_Services_boost

./: CMakeLists.txt  README.md
app1/: CMakeLists.txt  ImgGen.cpp  ImgGen.hpp  run_app1.cpp
app2/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.hpp  run_app2.cpp
app3/: CMakeLists.txt  DataLogger.cpp  DataLogger.hpp  run_app3.cpp
lib/: CMakeLists.txt  SharedMemory.cpp  SharedMemory.hpp
